force-app/main/default/src/objects/PJN_All_Care_Plan_Setting_Field__mdt/PJN_All_Care_Plan_Setting_Field__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: All Care Plans tab
Purpose: Define the field and its order to be displayed on the All Care Plans tab.
Metadata Relationship(s): All Care Plan Setting
Created by Mavens: Yes</description>
    <label>All Care Plan Setting Field</label>
    <pluralLabel>All Care Plan Setting Fields</pluralLabel>
</CustomObject>