force-app/main/default/src/objects/PJN_All_Care_Plan_Setting_Field__mdt/fields/PJN_All_Care_Plan_Setting__c.field-meta.xml
<CustomField>
    <fullName>PJN_All_Care_Plan_Setting__c</fullName>
    <label>All Care Plan Setting</label>
    <referenceTo>PJN_All_Care_Plan_Setting__mdt</referenceTo>
    <relationshipLabel>All Care Plan Setting Fields</relationshipLabel>
    <relationshipName>PJN_All_Care_Plan_Setting_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>