force-app/main/default/src/objects/PJN_All_Care_Plan_Setting_Field__mdt/fields/PJN_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>